<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".overview_cats.DetailedCatInfoFragment" >

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/button_save_image_on_device"
        android:layout_width="@dimen/button_save_image_on_device_width"
        android:layout_height="@dimen/button_save_image_on_device_height"
        android:background="@drawable/ic_save_on_device_image"
        app:layout_constraintBottom_toBottomOf="@+id/image_view"
        app:layout_constraintEnd_toEndOf="@+id/image_view" />

    <TextView
        android:id="@+id/text_view_cat_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/headers_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save_image_on_device"
        tools:text="Cat name" />

    <TextView
        android:id="@+id/text_view_cat_alt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/description_text_size"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_cat_name"
        tools:text="Alt cat name" />

    <TextView
        android:id="@+id/label_cat_temperament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_cat_temperament"
        android:textSize="@dimen/headers_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_cat_alt_name" />

    <TextView
        android:id="@+id/text_view_cat_temperament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/description_text_size"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/label_cat_temperament"
        app:layout_constraintStart_toEndOf="@+id/label_cat_temperament"
        app:layout_constraintTop_toTopOf="@+id/label_cat_temperament"
        tools:text="temperament" />

    <TextView
        android:id="@+id/label_cat_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_cat_origin"
        android:textSize="@dimen/headers_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_cat_temperament" />

    <TextView
        android:id="@+id/text_view_cat_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/description_text_size"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/label_cat_origin"
        app:layout_constraintStart_toEndOf="@+id/label_cat_origin"
        app:layout_constraintTop_toTopOf="@+id/label_cat_origin"
        tools:text="origin" />

    <TextView
        android:id="@+id/label_cat_life_span"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_cat_life_span"
        android:textSize="@dimen/headers_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_cat_origin" />

    <TextView
        android:id="@+id/text_view_cat_life_span"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/description_text_size"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/label_cat_life_span"
        app:layout_constraintStart_toEndOf="@+id/label_cat_life_span"
        app:layout_constraintTop_toTopOf="@+id/label_cat_life_span"
        tools:text="life span" />

    <TextView
        android:id="@+id/label_cat_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_cat_description"
        android:textSize="@dimen/headers_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_cat_life_span" />

    <TextView
        android:id="@+id/text_view_cat_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/description_text_size"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_cat_description"
        tools:text="description" />

    <TextView
        android:id="@+id/label_cat_adaptability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/headers_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_cat_description"
        android:text="@string/label_cat_adaptability" />

    <RatingBar
        android:id="@+id/rating_bar_cat_adaptability"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/label_cat_adaptability"
        app:layout_constraintStart_toEndOf="@+id/label_cat_adaptability"
        app:layout_constraintTop_toTopOf="@+id/label_cat_adaptability"
        tools:rating="3" />

    <TextView
        android:id="@+id/label_cat_affection_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_cat_affection_level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_cat_adaptability" />

    <RatingBar
        android:id="@+id/rating_bar_cat_affection_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/label_cat_affection_level"
        app:layout_constraintStart_toEndOf="@+id/label_cat_affection_level"
        app:layout_constraintTop_toTopOf="@+id/label_cat_affection_level" />

    <TextView
        android:id="@+id/label_cat_child_friendly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:text="@string/label_cat_child_friendly"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_cat_affection_level" />

    <RatingBar
        android:id="@+id/rating_bar_cat_child_friendly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/label_cat_child_friendly"
        app:layout_constraintStart_toEndOf="@+id/label_cat_child_friendly"
        app:layout_constraintTop_toTopOf="@+id/label_cat_child_friendly" />


</androidx.constraintlayout.widget.ConstraintLayout>